Fixing Jekyll 3.0 related docs nav bug
GH pages was upgraded to Jekyll 3.0 at some unknown point in time, and I
believe (hard to find concrete info on this) it started over-writing any
manually specified `id` parameters in the doc Front Matter with some
auto-generated id. The navigation relied upon this manually set id, so
this broke the nav. This fix just mods all the docs Front Matter from
`id` => `pageid` and then corrects the navigation to look for that param
instead.

--- a/docs/_includes/nav_docs.html
+++ b/docs/_includes/nav_docs.html
@@ -7,7 +7,7 @@
       items     : [
         {% for item in group.items %}
         {% for docitem in site.docs %}
-          {% if docitem.id == item.id %}
+          {% if docitem.pageid == item.id %}
             {% assign doc = docitem %}
           {% endif %}
         {% endfor %}
