--- a/docs/_layouts/blog.html
+++ b/docs/_layouts/blog.html
@@ -5,8 +5,11 @@ layout: default
 
 <div class="mainContainer blogContainer postContainer">
   <div id="main_wrap" class="wrapper mainWrapper">
-    {% include nav_blog.html %}
-    {{ content }}
+    <div class="blogWrapper">
+      {% include nav_blog.html %}
+      <div class="blogPostWrapper">
+        {{ content }}
+      </div>
+    </div>
   </div>
 </div>
-
