Add FileChanges / hunk component to render unified diffs
Reviewed By: vjeux

Differential Revision: D4583811

fbshipit-source-id: 79f4dd69b0f8606ea2ab008e3a79a36c9fba925d

--- a/pkg/nuclide-diff-view/styles/diff-view-component.less
+++ b/pkg/nuclide-diff-view/styles/diff-view-component.less
@@ -179,6 +179,7 @@
   .nuclide-ui-dashed-background();
 }
 
+/* BEGIN Keep in sync with nuclide-ui/styles/FileChanges: */
 // Default colors for themes that do not specify any.
 @add-color: #0c0;
 @add-color: @text-color-success;
@@ -207,6 +208,7 @@ atom-text-editor {
   }
 
 }
+/* END Keep in sync with nuclide-ui/styles/FileChanges: */
 
 .nuclide-diff-view-split-navigation-gutter {
   position: absolute;
