Show loading spinner while waiting for thread info in the debugger
Summary: When switching from Running to Paused, we expect thread info from the debugger backends. For apps with many threads, this can take a while to produce - and currently the threads pane looks like it's finished rendering, but it shows no threads.  This adds a loading spinner to indicate thread info isn't ready yet.  This helps a lot in the Java case for a large app like fb4a that has many threads.

Reviewed By: johnislarry

Differential Revision: D4615638

fbshipit-source-id: ec76b25af463e1fb3e9d950e53936bb7aba4f0a2

--- a/pkg/nuclide-debugger/styles/ui.less
+++ b/pkg/nuclide-debugger/styles/ui.less
@@ -263,3 +263,11 @@ Use flexbox cross-axis stretch to fill the vertical space.
     font-weight: bold;
     color: @text-color-warning;
 }
+
+.nuclide-debugger-thread-loading {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
