Breakpoint window improvements
Summary: Taking some feedback from the Nuclide group. Ensuring the breakpoints window remains visible in the debugger even when the debugger is not attached, and that clicking the label part of a breakpoint doesn't uncheck the "breakpoint active" box and cause the breakpoint to be disabled.

Reviewed By: jgebhardt

Differential Revision: D4654829

fbshipit-source-id: 80f94b0e62447f4918ca10f1823f8f425811b27c

--- a/pkg/nuclide-debugger/styles/ui.less
+++ b/pkg/nuclide-debugger/styles/ui.less
@@ -122,6 +122,10 @@ Use flexbox cross-axis stretch to fill the vertical space.
   margin-bottom: 5px;
 }
 
+.nuclide-debugger-breakpoint {
+  padding-left: 0.25em;
+}
+
 .nuclide-debugger-breakpoint-unresolved {
   text-decoration: line-through;
 }
