Freeform refactorings: wire up the UI [2/2]
Summary: This adds UI components for the display of freeform refactorings - in particular, their use of a custom form to accept custom arguments.

Reviewed By: nmote

Differential Revision: D4644371

fbshipit-source-id: c68b25dcb632538adddbc86a0baa864c2b664421

--- a/pkg/nuclide-refactorizer/styles/refactorizer.less
+++ b/pkg/nuclide-refactorizer/styles/refactorizer.less
@@ -6,3 +6,19 @@
   justify-content: space-between;
   margin-bottom: @component-padding;
 }
+
+.nuclide-refactorizer-refactor-option {
+  margin-top: @component-padding;
+}
+
+.nuclide-refactorizer-pick-freeform {
+  margin-right: @component-padding;
+}
+
+.nuclide-refactorizer-freeform-group {
+  margin-bottom: @component-padding;
+}
+
+.nuclide-refactorizer-freeform-label {
+  margin-bottom: @component-icon-padding;
+}
