RFC: Add timestamps to console
Summary:
I often forget whether items in the console are current or stale especially for repetitive records e.g. from hg.
This adds a `received` property to all records and shows them in the console.

{F66028412}

Reviewed By: matthewwithanm

Differential Revision: D4655421

fbshipit-source-id: e506fd06e787ab9c6b0770de93cb609b98bbd525

--- a/pkg/nuclide-console/styles/nuclide-console.less
+++ b/pkg/nuclide-console/styles/nuclide-console.less
@@ -322,7 +322,8 @@
   }
 }
 
-.nuclide-console-record-source-label {
+.nuclide-console-record-source-label,
+.nuclide-console-record-timestamp {
   align-self: flex-start;
   margin: 2px 0 0 4px;
   white-space: nowrap;
@@ -333,6 +334,11 @@
     padding-top: 0;
     padding-bottom: 0;
   }
+}
+
+.nuclide-console-record-timestamp {
+  background-color: @nuclide-console-record-background-color-normal;
+  padding: 1px 2px;
 }
 
 .nuclide-console-input-wrapper {
