Improve console colors & readability
Summary: Changelog: Improved the way console records are highlighted to make them more readable.

Reviewed By: matthewwithanm

Differential Revision: D4655417

fbshipit-source-id: 3c37aebc08b5fb5cead4b9a78cbd285a2fc124e9

--- a/pkg/nuclide-console/styles/nuclide-console.less
+++ b/pkg/nuclide-console/styles/nuclide-console.less
@@ -4,15 +4,12 @@
 @nuclide-console-border-size: 1px;
 @nuclide-console-record-background-color-normal: @syntax-background-color;
 @nuclide-console-record-text-color-normal: @syntax-text-color;
-@nuclide-console-record-border-color-normal: @base-border-color;
-@nuclide-console-record-background-color-error: lighten(@background-color-error, 25%);
-@nuclide-console-record-text-color-error: darken(@text-color-error, 40%);
+@nuclide-console-record-border-color-normal: fade(@base-border-color, 50%);
+@nuclide-console-record-text-color-error: @text-color-error;
 @nuclide-console-record-border-color-error: @background-color-error;
-@nuclide-console-record-background-color-warning: lighten(@background-color-warning, 25%);
-@nuclide-console-record-text-color-warning: darken(@text-color-warning, 40%);
+@nuclide-console-record-text-color-warning: @text-color-warning;
 @nuclide-console-record-border-color-warning: @background-color-warning;
-@nuclide-console-record-background-color-success: lighten(@background-color-success, 25%);
-@nuclide-console-record-text-color-success: darken(@text-color-success, 40%);
+@nuclide-console-record-text-color-success: @text-color-success;
 @nuclide-console-record-border-color-success: @background-color-success;
 @nuclide-console-record-vertical-padding: 1px;
 @nuclide-console-record-horizontal-padding: 5px;
@@ -113,7 +110,8 @@
   border-radius: 0;
   border-top: @nuclide-console-border-size solid @nuclide-console-record-border-color-normal;
   color: @nuclide-console-record-text-color-normal;
-
+  cursor: text;
+  border-left: (@component-padding / 2) solid @syntax-background-color;
   pre {
     background-color: transparent;
 
@@ -160,14 +158,7 @@
   }
 
   &.level-warning {
-    background-color: @nuclide-console-record-background-color-warning;
-    border-color: @nuclide-console-record-border-color-warning;
-
-    // The border on both sides of the warning message should be the warning
-    // color unless it's a higher-level (error).
-    & + :not(.level-error) {
-      border-top-color: @nuclide-console-record-border-color-warning;
-    }
+    border-left-color: @nuclide-console-record-border-color-warning;
 
     pre, pre a, .nuclide-console-lazy-nested-value div, .nuclide-console-lazy-nested-value span {
       color: @nuclide-console-record-text-color-warning;
@@ -179,14 +170,7 @@
   }
 
   &.level-success {
-    background-color: @nuclide-console-record-background-color-success;
-    border-color: @nuclide-console-record-border-color-success;
-
-    // The border on both sides of the success message should be the success
-    // color unless it's a higher-level.
-    & + :not(.level-error):not(.level-warning) {
-      border-top-color: @nuclide-console-record-border-color-success;
-    }
+    border-left-color: @nuclide-console-record-border-color-success;
 
     pre, pre a, .nuclide-console-lazy-nested-value div, .nuclide-console-lazy-nested-value span {
       color: @nuclide-console-record-text-color-success;
@@ -198,13 +182,7 @@
   }
 
   &.level-error {
-    background-color: @nuclide-console-record-background-color-error;
-    border-color: @nuclide-console-record-border-color-error;
-
-    // The border on both sides of the error should be the error color.
-    & + .nuclide-console-record {
-      border-top-color: @nuclide-console-record-border-color-error;
-    }
+    border-left-color: @nuclide-console-record-border-color-error;
 
     pre, pre a, .nuclide-console-lazy-nested-value div, .nuclide-console-lazy-nested-value span {
       color: @nuclide-console-record-text-color-error;
@@ -298,6 +276,11 @@
   &.request {
     display: flex;
     background-color: @syntax-background-color;
+  }
+
+  // Aid visual tracking while hovering over a record (esp. when the console window is very wide).
+  &:hover {
+    background-color: lighten(@syntax-background-color, 2%);
   }
 
 }
@@ -434,7 +417,7 @@ atom-text-editor[mini].nuclide-console-filter-field {
   }
 
   &.invalid {
-    background-color: @nuclide-console-record-background-color-error;
+    background-color: lighten(@background-color-error, 25%);
     color: @nuclide-console-record-text-color-error;
     border-color: @nuclide-console-record-border-color-error;
   }
