Use a react-virtualized List to achieve windowing
Summary:
This uses the changes from all the previous diffs to implement the windowing inside `OutputTable` (the bulk of the changes are in `OutputTable`).

At a high level, the changes are:
- Using a react virtualized `<List>` inside `OutputTable` to achieve windowing
- Adding a function to measure the height of a rendered `RecordView` to keep the state up to date with its height
- Passing callbacks down to be able to detect height changes
- Passing the array of `DisplayableRecord`s down from `ConsoleContainer` to the `OutputTable` so it can be rendered

Reviewed By: matthewwithanm

Differential Revision: D4654187

fbshipit-source-id: ae86410af15d787f82c06c356d2d86ba2635fda5

--- a/pkg/nuclide-console/styles/nuclide-console.less
+++ b/pkg/nuclide-console/styles/nuclide-console.less
@@ -88,17 +88,12 @@
   }
 }
 
-.nuclide-console-scroll-pane {
-  overflow-y: auto;
-  overflow-x: hidden;
-  background-color: @syntax-background-color;
-
-  // Hack: This ensures that the scrollbar appears on top of all of the records.
-  //       Without it, the atom-text-editors appear above the scrollbar.
-  transform: translate3d(0, 0, 0);
-}
-
 .nuclide-console-table-wrapper {
+  display: flex;
+  flex: 1;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  background-color: @syntax-background-color;
   // Make sure that record text is selectable.
   -webkit-user-select: text;
 }
