Add a reminder that some console messages are filtered
Summary:
This adds a line item reminding the user that some messages are filtered when console sources are hidden.

The design is inspired by Chrome's similar message in its console when some sources are hidden

Reviewed By: matthewwithanm

Differential Revision: D4697126

fbshipit-source-id: 06a7baaafe6d85a287914fd096fd82f8bea86f9c

--- a/pkg/nuclide-console/styles/nuclide-console.less
+++ b/pkg/nuclide-console/styles/nuclide-console.less
@@ -436,3 +436,12 @@ atom-text-editor[mini].nuclide-console-filter-field {
 .nuclide-console-header-funnel-icon {
   height: 12px;
 }
+
+.nuclide-console-filtered-reminder {
+  display: flex;
+  font-style: italic;
+
+  a {
+    text-decoration: underline;
+  }
+}
