Fix error on right click on the icon in uncommitted changes
Summary: This is a regression introduced when the context menu target for uncommitted changes was expanded to the whole list item rather than just the text

Reviewed By: jgebhardt

Differential Revision: D4743516

fbshipit-source-id: 89f96c4f65dcd48af0acfd64d11f94cfa3ed1fc2

--- a/pkg/nuclide-ui/styles/ChangedFilesList.less
+++ b/pkg/nuclide-ui/styles/ChangedFilesList.less
@@ -1,3 +1,7 @@
 .nuclide-file-changes-file-entry {
   pointer-events: none;
 }
+
+.nuclide-file-changes-file-entry-icon {
+  pointer-events: none;
+}
