Fix callstack UI issues and extra scrollbars in debugger panes
Summary:
The current callstack pane has several issues:
- Selected line highlight doesn't select entire line
- Address and location field text all run together if there's not enough horizontal space so you can't read them
- Extra scrollbars make scrolling super weird
- Content doesn't fill flexbox

Fixing nested scrollbars in the Threads and Scopes panes as well. Now all 3 just have a single set of scrollbars on the flexbox.

Reviewed By: shushz

Differential Revision: D4737121

fbshipit-source-id: 5a2b506bb7a38a35897adcc834affc62b25d3172

--- a/pkg/nuclide-debugger/styles/ui.less
+++ b/pkg/nuclide-debugger/styles/ui.less
@@ -118,7 +118,8 @@ Use flexbox cross-axis stretch to fill the vertical space.
 /* General debugger UI */
 .nuclide-debugger-section-content {
   max-height: 20em;
-  overflow-y: auto;
+  overflow-y: visible;
+  overflow-x: visible;
   margin-bottom: 5px;
 }
 
@@ -143,13 +144,14 @@ Use flexbox cross-axis stretch to fill the vertical space.
   font-family: Menlo, Monaco, Consolas, monospace;
   justify-content: space-between;
   min-height: 23px; // Match height of AtomInput to prevent list items from jumping around.
-  overflow: auto;
+  overflow: visible;
 }
 
 .nuclide-debugger-expression-value-content {
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  overflow-x: visible;
 }
 
 .nuclide-debugger-watch-expression-value-content {
@@ -198,9 +200,14 @@ Use flexbox cross-axis stretch to fill the vertical space.
 }
 
 .nuclide-debugger-callstack-item-selected {
-  background-color: @background-color-info;
   color: @text-color-highlight;
   font-weight: bold;
+}
+
+.nuclide-debugger-callstack-list-empty {
+  font-style: italic;
+  padding: 1em;
+  text-align: center;
 }
 
 .nuclide-debugger-callstack-name {
