Add line number gutter to diff hunk component
Summary: `atom-text-editor` does not support line numbers starting > 0, but diff hunks start at an arbitrary offset. This adds a gutter to the hunk-view text editor which imitates the default line-number gutter.

Reviewed By: jgebhardt

Differential Revision: D4637800

fbshipit-source-id: 0df7715ddfbd062b9a338a9b1f4f64e5e7be31d0

--- a/pkg/nuclide-ui/styles/FileChanges.less
+++ b/pkg/nuclide-ui/styles/FileChanges.less
@@ -27,6 +27,14 @@
   margin-top: 4 * @component-padding;
 }
 
+.nuclide-ui-file-changes-additions-deletion-count {
+  margin-bottom: 0.5em;
+}
+
+.nuclide-ui-hunk-diff-spacer {
+  height: 1em;
+}
+
 /* BEGIN Keep in sync with nuclide-diff-view/styles: */
 // Default colors for themes that do not specify any.
 @add-color: #0c0;
