Diff View: Scroll file changes while keeping the navigation selector visible
Reviewed By: vjeux

Differential Revision: D4773067

fbshipit-source-id: 89b8156ea82f918ff1c384599a121d601a031fb2

--- a/pkg/nuclide-diff-view/styles/diff-view-component.less
+++ b/pkg/nuclide-diff-view/styles/diff-view-component.less
@@ -329,6 +329,8 @@ atom-text-editor {
 .nuclide-diff-view-navigator-file-changes-container {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
 
 .nuclide-diff-view-tree {
