Add darken highlight on hover
Summary: If the theme is full white, lighten doesn't do anything. This trick was taken from dashed-background.less

Reviewed By: matthewwithanm

Differential Revision: D4772691

fbshipit-source-id: ee9544e1518fd573ba7e84718d4f7f0cf5773328

--- a/pkg/nuclide-console/styles/nuclide-console.less
+++ b/pkg/nuclide-console/styles/nuclide-console.less
@@ -294,7 +294,12 @@
 
   // Aid visual tracking while hovering over a record (esp. when the console window is very wide).
   &:hover {
-    background-color: lighten(@syntax-background-color, 2%);
+    & when (lightness(@syntax-background-color) <= 50%) {
+      background-color: lighten(@syntax-background-color, 2%);
+    }
+    & when (lightness(@syntax-background-color) > 50%) {
+      background-color: darken(@syntax-background-color, 3%);
+    }
   }
 
 }
