Make the sorting indicator smaller and stop jumping
Summary: See title

Reviewed By: jgebhardt

Differential Revision: D4775441

fbshipit-source-id: a97a7dd78fd7bc75584a1c257c308dfee9d607f5

--- a/pkg/nuclide-ui/styles/Table.less
+++ b/pkg/nuclide-ui/styles/Table.less
@@ -50,6 +50,11 @@
   color: @text-color-highlight;
 }
 
+.nuclide-ui-table-sort-indicator {  
+  position: absolute;
+  transform: scale(0.6);
+}
+
 .nuclide-ui-table-header-resize-handle {
   cursor: ew-resize;
   position: absolute;
