Match button size for reviewers buttons
Summary: Apply same class styling to both to make sizes match

Reviewed By: vjeux

Differential Revision: D4772710

fbshipit-source-id: 93b94431f818cacbf3ab0a35b361cf42f4890d06

--- a/pkg/nuclide-diff-view/styles/diff-view-component.less
+++ b/pkg/nuclide-diff-view/styles/diff-view-component.less
@@ -5,11 +5,14 @@
 @revisionBubbleDiameter: 10px;
 @revisionBubbleShadowRadius: 4px;
 
-.nuclide-diff-view-removable-tag {
+.nuclide-diff-view-removable-tag, .nuclide-diff-view-suggested-reviewers-tag {
   margin-left: 2px;
   margin-right: 2px;
-  float: left;
   font-size: @input-font-size;
+}
+
+.nuclide-diff-view-removable-tag {
+  float: left;
 }
 
 .nuclide-diff-view-padded {
