Use <div> instead of <table>
Summary:
There are many bugs because of `<table>`:
- The border doesn't refresh correctly when you drag
- You can't use `min-width`

Switching from `<table>` to `<div>` is actually really easy because the code doesn't rely on the inner sizing of the elements. So we can just switch.

Reviewed By: jgebhardt

Differential Revision: D4771103

fbshipit-source-id: 757ae5fe19b417f4cf0067ea0be832ec263ad841

--- a/pkg/nuclide-ui/styles/Table.less
+++ b/pkg/nuclide-ui/styles/Table.less
@@ -22,11 +22,16 @@
   border-bottom: 1px solid @base-border-color;
 }
 
+.nuclide-ui-table-header, .nuclide-ui-table-row {
+  display: flex;
+}
+
 .nuclide-ui-table-header-cell,
 .nuclide-ui-table-body-cell {
   border-right: 1px solid @base-border-color;
   overflow: hidden;
   padding: 2px 4px;
+  min-width: 40px;
 }
 
 .nuclide-ui-table-body-cell {
