Convert commit view information container to flexbox
Reviewed By: vjeux

Differential Revision: D4801839

fbshipit-source-id: 80cefc42f8312666c73bce39dfdabf249f9659f5

--- a/pkg/nuclide-diff-view/styles/diff-view-component.less
+++ b/pkg/nuclide-diff-view/styles/diff-view-component.less
@@ -12,7 +12,22 @@
 }
 
 .nuclide-diff-view-removable-tag {
-  float: left;
+  padding-top: 2px;
+}
+
+.nuclide-diff-view-tag-container {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+
+  atom-text-editor {
+    margin-top: 2px;
+  }
+}
+
+.nuclide-diff-view-tag-input {
+  flex-grow: 1;
+  min-width: 25%;
 }
 
 .nuclide-diff-view-padded {
