fixing how checkboxes are added to the FileChanges component
Summary:
The way the checkboxes were forced into the existing FileChanges and HunkDiff components was pretty gross and inefficient. Because everything was relying on a single factory method, changing any single checkbox would make a new method and thus would rerender every checkbox on the component--even those completely unrelated to the checkbox being changed.
The new solution is to wrap FileChanges and HunkDiff in components that will provide the checkboxes themselves, allowing us to pass our custom data structures around.

Part 1 of 2 (or maybe 3).  Next part will add the wrapper around the HunkDiff component.

Reviewed By: mostafaeweda

Differential Revision: D4801796

fbshipit-source-id: 317baf6a92b3ca90ad919aa00a7a2a17137118c6

--- a/pkg/nuclide-patch-editor/styles/nuclide-patch-editor.less
+++ b/pkg/nuclide-patch-editor/styles/nuclide-patch-editor.less
@@ -1,3 +1,11 @@
 .nuclide-patch-editor {
   width: 100%;
 }
+
+.nuclide-patch-editor-file-changes {
+  flex-grow: 1;
+}
+
+.nuclide-patch-editor-select-file-changes {
+  display: flex;
+}
