Add compat layer for workspace views -> Atom workspace pane location transition
Summary: If the new Atom API is available, use that instead. This paves the way for deleting the workspace-views package (once atom/atom#13977 makes it to stable).

Reviewed By: shushz

Differential Revision: D4714099

fbshipit-source-id: 050e90b7aa41cabb698aac765e2df62d82eb7c4c

--- a/pkg/sample-lsp-tester/styles/styles.less
+++ b/pkg/sample-lsp-tester/styles/styles.less
@@ -6,7 +6,8 @@
   width: 100%;
   background-color: @pane-item-background-color;
 
-  atom-panel & {
+  atom-dock &,
+  atom-panel & { // TODO(matthewwithanm): Remove this selector when killing workspace views
     background-color: @tool-panel-background-color;
   }
 }
