--- a/pkg/nuclide-console/styles/nuclide-console.less
+++ b/pkg/nuclide-console/styles/nuclide-console.less
@@ -48,7 +48,8 @@
 .nuclide-ui-toolbar {
   background-color: @pane-item-background-color;
 
-  atom-panel & {
+  atom-dock &,
+  atom-panel & { // TODO(matthewwithanm): Remove this selector when killing workspace views
     background-color: @tool-panel-background-color;
   }
 }
