fixing how checkboxes are added to the FileChanges component [2/3]
Summary:
Replaced factory method grossness and weirdness with HOC weirdness (but less grossness)
No longer rerenders chunks that haven't changed.

Part 3 will cover the checkboxes on the editor

Depends on D4805065

Reviewed By: mostafaeweda

Differential Revision: D4805132

fbshipit-source-id: e4a3f988435424c5c23d86389501d94d19f7380b

--- a/pkg/nuclide-patch-editor/styles/nuclide-patch-editor.less
+++ b/pkg/nuclide-patch-editor/styles/nuclide-patch-editor.less
@@ -9,3 +9,11 @@
 .nuclide-patch-editor-select-file-changes {
   display: flex;
 }
+
+.nuclide-patch-editor-select-hunk-changes {
+  display: flex;
+}
+
+.nuclide-patch-editor-hunk-changes {
+  flex-grow: 1;
+}
