Better spacing on checkboxes
Summary:
Cleaning up and adding css

Depends on D4809312

Reviewed By: jgebhardt

Differential Revision: D4809514

fbshipit-source-id: e47b032b5f878da4dfc7441ba7e31643fceb66ff

--- a/pkg/nuclide-patch-editor/styles/nuclide-patch-editor.less
+++ b/pkg/nuclide-patch-editor/styles/nuclide-patch-editor.less
@@ -17,3 +17,19 @@
 .nuclide-patch-editor-hunk-changes {
   flex-grow: 1;
 }
+
+.nuclide-patch-editor-file-checkbox {
+  margin: (@component-padding * 1.3) (@component-padding * 0.6);
+}
+
+.nuclide-patch-editor-hunk-checkbox {
+  margin: (@component-padding * 0.4) (@component-padding * 0.6);
+}
+
+.nuclide-patch-editor-line-checkbox {
+  margin: (@component-padding * -0.1) (@component-padding * 0.4);
+}
+
+.gutter[gutter-name="nuclide-patch-editor-checkbox-gutter"] {
+  width: @component-padding * 2;
+}
