Watch expressions' horizontal scrollbar not visible
Summary: If you have watch expressions in the Debugger that are wider than the pane, the horizontal scrollbar appears at the bottom of the watch expression item, which may not even be visible unless you scroll all the way down vertically.

Reviewed By: mostafaeweda

Differential Revision: D4878203

fbshipit-source-id: e04407b1222b913288587e9b0c211596244db315

--- a/pkg/nuclide-debugger/styles/ui.less
+++ b/pkg/nuclide-debugger/styles/ui.less
@@ -152,7 +152,8 @@ Use flexbox cross-axis stretch to fill the vertical space.
 }
 
 .nuclide-debugger-watch-expression-value-content {
-  overflow-x: auto;
+  width: 100%;
+  overflow: visible;
 }
 
 .nuclide-debugger-watch-expression-xout {
